--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,12 @@
 <!-- Always force latest IE rendering engine or request Chrome Frame -->
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-
+<script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs&sensor=false">
+</script>
+<script type="text/javascript"
+        src="http://maps.googleapis.com/maps/api/js?libraries=visualization&key=AIzaSyDFAg4UahxEExMg5KMJmd05M4Kq0rBcbEI&sensorr=false">
+</script>
 
 <!-- Emp -->
 <div id="fb-root"></div>
