--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -2,7 +2,14 @@
 <!-- top navbar -->
 <div class="navbar navbar-fixed-top" role="navigation" style="padding-top: 0px; background-color: #f5f5f5">
   <div>
-      <nav class="hidden-xs ">
+      <nav class="hidden-xs  ">
+        <div class="col-md-offset-1" style="padding-top: 15px; margin-bottom: -45px" >
+            <%= form_for current_user, remote: true  do |f| %>
+                <div> <%= f.hidden_field :lat, class: 'input-sm', id: 'lat' %></div>
+                <div> <%= f.hidden_field :lng, class: 'input-sm', id: 'lng' %></div>
+                <div class="col-md-2 " style="margin-bottom: 10px"><%= f.submit "Update your location", class: 'btn btn-large btn-primary' %></div>
+            <% end %>
+        </div>
           <%	 if loc['results'][0].nil? %>
 
           <%	 else %>
@@ -44,3 +51,21 @@
       </nav>
   </div>
 </div>
+
+
+
+<script>
+    var lat = document.getElementById("lat");
+    var lng = document.getElementById("lng");
+    $(function() {
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(showPosition);
+        } else {
+            lat.innerHTML = "Geolocation is not supported by this browser.";
+        }
+        function showPosition(position) {
+            lat.innerHTML=position.coords.latitude;
+            lng.innerHTML=position.coords.longitude;
+        }
+    });
+</script>
