--- a/app/views/limbo/places.html.erb
+++ b/app/views/limbo/places.html.erb
@@ -1,45 +1,30 @@
+
+<%= form_for current_user, remote: true  do |f| %>
+
+      <div> <%= f.text_field :lat, class: 'input-sm', id: 'lat' %></div>
+      <div> <%= f.text_field :lng, class: 'input-sm', id: 'lng' %></div>
+
+    <div class="col-md-7 " style="margin-bottom: 10px"><%= f.submit "Update your location", class: 'btn btn-large btn-primary' %></div>
+<% end %>
+
+
 <script>
-    $(document).ready(function () {
-        var myLatlng = new google.maps.LatLng(
-                <% if current_user.lat.nil? %>
-                23.634501,-102.55278399999997
-                <% else%>
-                <%= current_user.lat %>,<%= current_user.lng %>
-                <% end%>
-        );
-        var mapOptions = {
-            zoom: 4,
-            center: myLatlng
+    var lat = document.getElementById("lat");
+    var lng = document.getElementById("lng");
+    $(function() {
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(showPosition);
+        } else {
+            lat.innerHTML = "Geolocation is not supported by this browser.";
         }
-        var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-        // Place a draggable marker on the map
-        var marker = new google.maps.Marker({
-            position: myLatlng,
-            map: map,
-            draggable:true,
-            title:"Your location!"
-        });
-        google.maps.event.addListener(marker, 'dragend', function (event) {
-            document.getElementById("latbox").value = this.getPosition().lat();
-            document.getElementById("lngbox").value = this.getPosition().lng();
-        });
+        function showPosition(position) {
+            lat.innerHTML=position.coords.latitude;
+            lng.innerHTML=position.coords.longitude;
+        }
     });
 </script>
 
 
-<div class="col-md-12 col-xs-12">
-  <div class="row">
-    <p>Update your location</p>
-  </div>
 
-  <div class="row">
-    <%= form_for(current_user, :html => { :multipart => true }) do |f| %>
-        <div id="map-canvas" class="thumbnail" style="height:250px"></div>
-        <div id="latlong">
-          <div> <%= f.hidden_field :lat, class: 'input-sm', id: 'latbox' %></div>
-          <div> <%= f.hidden_field :lng, class: 'input-sm', id: 'lngbox' %></div>
-        </div>
-        <div class="col-md-7 " style="margin-bottom: 10px"><%= f.submit "Update your location", class: 'btn btn-large btn-primary' %></div>
-    <% end %>
-  </div>
-</div>
+
+
