--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -1,5 +1,6 @@
 
 <%	 if signed_in? %>
+
   <div class="hidden-xs" id="googlemaps">
     <div id="map-canvas" ></div>
   </div>
@@ -19,7 +20,19 @@
     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="border: 1px solid #d3d6db; " >
       <% fbplace['data'].each do |result| %>
 
-            <div class="row" style="margin-bottom: -15px;  margin-top: -10px">
+          <%= form_for(@micrositio, remote: true)  do |f| %>
+              <%= f.hidden_field :name, value: result['name'] %>
+              <%= f.hidden_field :referencefb, value: result['id'] %>
+              <%= f.hidden_field :lat, value: result['location']['latitude'] %>
+              <%= f.hidden_field :lng, value: result['location']['longitude'] %>
+              <%	 if result['picture'].nil?  %>
+              <%	else  %>
+                  <%= f.hidden_field :photo_file_name, value: result['picture']['data']['url'] %>
+              <% end %>
+              <%= f.submit "a", onchange: "$(this).parent('form').submit();" %>
+          <% end %>
+
+            <div id="lista" class="row" style="margin-bottom: -15px;  margin-top: -10px">
               <div class="col-md-4 col-sm-4 col-xs-4">
                 <%	 if result['picture'].nil?  %>
                 <%	else  %>
@@ -108,11 +121,9 @@
     <%=	 render "shared/ingresa" %>
 <% end %>
 
-
-
 <script>
     $(document).ready(function () {
-        var myLatlng = new google.maps.LatLng( <%= current_user.lat %>, <%= current_user.lng %>);
+        var myLatlng = new google.maps.LatLng(<%= current_user.lat %>,<%= current_user.lng %>);
         var mapOptions = {
             zoom: 10,
             center: myLatlng,
@@ -134,7 +145,6 @@
         var marker = new google.maps.Marker({
             position: myLatlng,
             map: map,
-            draggable:true,
             title:"Your location!"
         });
 
@@ -144,3 +154,5 @@
         });
     });
 </script>
+
+
