--- a/app/views/layouts/_topbarlogout.html.erb
+++ b/app/views/layouts/_topbarlogout.html.erb
@@ -1,18 +1,32 @@
-
 <!-- top navbar -->
-<div class="navbar navbar-fixed-top" role="navigation" style="padding-top: 0px; background-color: #f5f5f5">
-    <div class="navbar-header">
-    </div>
+<div class="navbar navbar-fixed-top" role="navigation" style="padding-bottom: 10px; margin-top: -5px; padding-top: 0px; background-color: #f5f5f5">
   <div>
-      <nav class="hidden-xs col-md-offset-3">
-        <ul class="nav " style="margin-right: 5%; padding-top: 20px">
-          <ul class="pull-right">
-            <li id="fat-menu" class="dropdown">
-                      <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchiquito"),     root_path   %>
-                      <%= link_to "Regístrate ahora!",    root_path   %>
-            </li>
-          </ul>
+    <nav class="hidden-xs  ">
+      <ul class="nav " style="margin-right: 5%; padding-top: 20px">
+        <ul class="pull-right list-inline">
+          <div class="text-center">
+            <i class="icon-facebook-sign"></i>  <%= link_to "Login with Facebook", user_omniauth_authorize_path(:facebook), class: " btn btn-lg btn-primary" %>
+          </div>
         </ul>
-      </nav>
+      </ul>
+    </nav>
   </div>
 </div>
+
+
+
+<script>
+    var lat = document.getElementById("lat");
+    var lng = document.getElementById("lng");
+    $(function() {
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(showPosition);
+        } else {
+            lat.innerHTML = "Geolocation is not supported by this browser.";
+        }
+        function showPosition(position) {
+            lat.innerHTML=position.coords.latitude;
+            lng.innerHTML=position.coords.longitude;
+        }
+    });
+</script>
