--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -16,9 +16,9 @@
           <%	 if loc['results'][0].nil? %>
 
           <%	 else %>
-            <div class="col-md-offset-5" style="padding-top: 15px; margin-bottom: -45px" >
+            <div class="col-md-5" style="padding-top: 15px; margin-bottom: -45px" >
 
-           <h2> <%= loc['results'][0]['address_components'][0]['short_name']  %> </h2>
+           <h2 style="color: black"> <%= loc['results'][0]['address_components'][0]['short_name']  %> </h2>
             </div>
           <%	 end %>
         <ul class="nav " style="margin-right: 5%; padding-top: 20px">
