--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -1,5 +1,31 @@
 
 <%	 if signed_in? %>
+    <script>
+        $(document).ready(function () {
+            var myLatlng = new google.maps.LatLng(<%= current_user.lat %>,<%= current_user.lng %>);
+            var mapOptions = {
+                zoom: 10,
+                center: myLatlng,
+                scrollwheel: false,
+                navigationControl: false,
+                mapTypeControl: false,
+                scaleControl: false,
+                mapTypeControl: false,
+                panControl: false,
+                rotateControl: false,
+                scaleControl: false,
+                streetViewControl: false,
+                zoomControl: false
+
+            }
+            var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+            google.maps.event.addListener(marker, 'dragend', function (event) {
+                document.getElementById("latbox").value = this.getPosition().lat();
+                document.getElementById("lngbox").value = this.getPosition().lng();
+            });
+
+        });
+    </script>
 
   <div class="hidden-xs" id="googlemaps">
     <div id="map-canvas" ></div>
@@ -19,6 +45,18 @@
     <%	fbplace = ActiveSupport::JSON.decode(open("https://graph.facebook.com/search?q=#{@actividad.namefb},page&fields=cover,checkins,name,location,category_list,picture.width(100)&type=place&center=#{current_user.lat},#{current_user.lng}&distance=30000&access_token=#{current_user.oauth_token}&limit=30").read) %>
     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="border: 1px solid #d3d6db; " >
       <% fbplace['data'].each do |result| %>
+          <script>
+
+
+              var myLatlng = new google.maps.LatLng(<%= result['location']['latitude']%>,<%= result['location']['longitude']%>);
+              var marker = new google.maps.Marker({
+                  position: myLatlng,
+                  map: map
+              });
+
+
+
+          </script>
 
           <%= form_for(@micrositio, remote: true)  do |f| %>
               <%= f.hidden_field :name, value: result['name'] %>
@@ -29,7 +67,9 @@
               <%	else  %>
                   <%= f.hidden_field :photo_file_name, value: result['picture']['data']['url'] %>
               <% end %>
-              <%= f.submit "a", onchange: "$(this).parent('form').submit();" %>
+              <%= button_tag(type: 'submit', class: 'transparent') do %>
+                  <i class="fa fa-1x fa-location-arrow"></i>
+              <% end %>
           <% end %>
 
             <div id="lista" class="row" style="margin-bottom: -15px;  margin-top: -10px">
@@ -121,38 +161,6 @@
     <%=	 render "shared/ingresa" %>
 <% end %>
 
-<script>
-    $(document).ready(function () {
-        var myLatlng = new google.maps.LatLng(<%= current_user.lat %>,<%= current_user.lng %>);
-        var mapOptions = {
-            zoom: 10,
-            center: myLatlng,
-            scrollwheel: false,
-            navigationControl: false,
-            mapTypeControl: false,
-            scaleControl: false,
-            mapTypeControl: false,
-            panControl: false,
-            rotateControl: false,
-            scaleControl: false,
-            streetViewControl: false,
-            zoomControl: false
 
-        }
-        var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-
-        // Place a draggable marker on the map
-        var marker = new google.maps.Marker({
-            position: myLatlng,
-            map: map,
-            title:"Your location!"
-        });
-
-        google.maps.event.addListener(marker, 'dragend', function (event) {
-            document.getElementById("latbox").value = this.getPosition().lat();
-            document.getElementById("lngbox").value = this.getPosition().lng();
-        });
-    });
-</script>
 
 
