--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -1,31 +1,6 @@
 
 <%	 if signed_in? %>
-    <script>
-        $(document).ready(function () {
-            var myLatlng = new google.maps.LatLng(<%= current_user.lat %>,<%= current_user.lng %>);
-            var mapOptions = {
-                zoom: 10,
-                center: myLatlng,
-                scrollwheel: false,
-                navigationControl: false,
-                mapTypeControl: false,
-                scaleControl: false,
-                mapTypeControl: false,
-                panControl: false,
-                rotateControl: false,
-                scaleControl: false,
-                streetViewControl: false,
-                zoomControl: false
 
-            }
-            var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-            google.maps.event.addListener(marker, 'dragend', function (event) {
-                document.getElementById("latbox").value = this.getPosition().lat();
-                document.getElementById("lngbox").value = this.getPosition().lng();
-            });
-
-        });
-    </script>
 
   <div class="hidden-xs" id="googlemaps">
     <div id="map-canvas" ></div>
@@ -45,14 +20,16 @@
     <%	fbplace = ActiveSupport::JSON.decode(open("https://graph.facebook.com/search?q=#{@actividad.namefb},page&fields=cover,checkins,name,location,category_list,picture.width(100)&type=place&center=#{current_user.lat},#{current_user.lng}&distance=30000&access_token=#{current_user.oauth_token}&limit=30").read) %>
     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="border: 1px solid #d3d6db; " >
       <% fbplace['data'].each do |result| %>
-          <script>
+          <script  type="text/javascript">
 
 
-              var myLatlng = new google.maps.LatLng(<%= result['location']['latitude']%>,<%= result['location']['longitude']%>);
-              var marker = new google.maps.Marker({
-                  position: myLatlng,
-                  map: map
-              });
+                  marker = new google.maps.Marker({
+                      position: new google.maps.LatLng(<%= result['location']['latitude']%>, <%= result['location']['longitude']%>),
+                      map: map
+                  });
+
+
+
 
 
 
@@ -156,6 +133,34 @@
     </div>
     <div class="col-md-7">
     </div>
+
+
+    <script>
+        $(document).ready(function () {
+            var myLatlng = new google.maps.LatLng(<%= current_user.lat %>,<%= current_user.lng %>);
+            var mapOptions = {
+                zoom: 11,
+                center: myLatlng,
+                scrollwheel: false,
+                navigationControl: false,
+                mapTypeControl: false,
+                scaleControl: false,
+                mapTypeControl: false,
+                panControl: false,
+                rotateControl: false,
+                scaleControl: false,
+                streetViewControl: false,
+                zoomControl: false
+
+            }
+            var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+            var marker = new google.maps.Marker({
+                position: myLatlng,
+                map: map
+            });
+
+        });
+    </script>
 
 <% else %>
     <%=	 render "shared/ingresa" %>
