--- a/app/views/users/update.js.erb
+++ b/app/views/users/update.js.erb
@@ -1,9 +1,23 @@
 var myLatlng = new google.maps.LatLng(<%= current_user.lat %>,<%= current_user.lng %>);
+var mapOptions = {
+    zoom: 11,
+    center: myLatlng,
+    scrollwheel: false,
+    navigationControl: false,
+    mapTypeControl: false,
+    scaleControl: false,
+    mapTypeControl: false,
+    panControl: false,
+    rotateControl: false,
+    scaleControl: false,
+    streetViewControl: false,
+    zoomControl: false
+
+}
 var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 var marker = new google.maps.Marker({
     position: myLatlng,
-    map: map,
-    title: 'Hello World!'
+    map: map
 });
 
 var x = document.getElementById("demo");
