--- a/app/views/limbo/home.html.erb
+++ b/app/views/limbo/home.html.erb
@@ -29,12 +29,19 @@
 
     <div class="col-md-12 col-sm-12 col-xs-12" style="margin-bottom: 20px">
       <div class="row" style="background-color: #593e73; border-radius: 5px; padding: 15px;  margin-top: -10px; ">
-        <div class="col-md-10 col-md-offset-1" style="margin-top: 100px; text-align: center; color: #ffffff; margin-bottom: 200px">
+        <div class="col-md-10 col-md-offset-1" style="margin-top: 100px; text-align: center; color: #ffffff; margin-bottom: 50px">
           <p style="font-size: 24px; font-family: helvetica, verdana, arial, sans-serif"> QuickPlace is an app where users can view and make reservations at restaurants, bars, clubs, and events. </p>
         </div>
-        <div class="col-md-offset-4">
-        <h2 style="color: #ffffff">Welcome to QuickPlace</h2>
-        </div>
+        <section>
+          <div class="text-center  ">
+            <i class="icon-facebook-sign"></i>  <%= link_to "Login with Facebook", user_omniauth_authorize_path(:facebook), class: " btn btn-lg btn-primary" %>
+            <div style="margin-top: 30px">
+              <h2 style="color: #ffffff">Welcome to QuickPlace</h2>
+            </div>
+          </div>
+
+        </section>
+
 
       </div>
       <div class="row">
