--- a/app/views/users/update.js.erb
+++ b/app/views/users/update.js.erb
@@ -15,10 +15,14 @@ var mapOptions = {
 
 }
 var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+
 var marker = new google.maps.Marker({
     position: myLatlng,
     map: map
 });
+
+marker.setMap(map)
 
 var x = document.getElementById("demo");
 var z = document.getElementById("demoz");
