--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,10 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require bootstrap
- *= require bootstrap-theme
- *= require font-awesome.css.erb
+ *= require font-awesome
  *= require_tree .
- *= stub principal/custom
  */
 
 
