--- a/app/views/layouts/_header2.html.erb
+++ b/app/views/layouts/_header2.html.erb
@@ -12,6 +12,6 @@
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
 <script type="text/javascript"
-        src="http://maps.googleapis.com/maps/api/js?libraries=visualization&key=AIzaSyDFAg4UahxEExMg5KMJmd05M4Kq0rBcbEI&sensor=false">
+        src="http://maps.googleapis.com/maps/api/js?libraries=visualization,places&key=AIzaSyDFAg4UahxEExMg5KMJmd05M4Kq0rBcbEI&sensor=true">
 </script>
 <%=	 render 'layouts/analytics' %>
