--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -3,23 +3,17 @@
 <div class="navbar navbar-fixed-top" role="navigation" style="padding-top: 0px; background-color: #f5f5f5">
   <div>
       <nav class="hidden-xs  ">
-        <div class="col-md-offset-1" style="padding-top: 15px; margin-bottom: -45px" >
-          <%= form_for current_user, remote: true  do |f| %>
-              <div > <%= f.hidden_field :lat, id: 'demo' %></div>
-              <div > <%= f.hidden_field :lng, class: 'input-sm', id: 'demoz' %></div>
-              <%= button_tag(type: 'submit', class: 'transparent') do %>
-                  <i class="fa fa-2x fa-location-arrow"></i>
-              <% end %>
-            <% end %>
-        </div>
-          <%	 if loc['results'][0].nil? %>
-
-          <%	 else %>
-            <div class="col-md-offset-5" style="padding-top: 15px; margin-bottom: -45px" >
-
-           <h2 style="color: black"> <%= loc['results'][0]['address_components'][0]['short_name']  %> </h2>
+        <div class="col-md-12" style="padding-top: 0px; margin-bottom: -45px" >
+            <div class="col-md-6" style="padding-top: 10px">
+                    <%=	 render "users/form_google_topbar" %>
             </div>
-          <%	 end %>
+            <%	 if loc['results'][0].nil? %>
+            <%	 else %>
+                <div class="col-md-6" style="padding-top: 15px; margin-bottom: -45px" >
+                  <h2 style="color: black"> <%= loc['results'][0]['address_components'][0]['short_name']  %> </h2>
+                </div>
+            <%	 end %>
+        </div>
         <ul class="nav " style="margin-right: 5%; padding-top: 20px">
           <ul class="pull-right">
             <li id="fat-menu" class="dropdown">
@@ -54,32 +48,3 @@
   </div>
 </div>
 
-
-<script>
-    var myLatlng = new google.maps.LatLng(<%= current_user.lat %>,<%= current_user.lng %>);
-    var mapOptions = {
-        zoom: 4,
-        center: myLatlng
-    }
-    var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-
-    var marker = new google.maps.Marker({
-        position: myLatlng,
-        map: map,
-        title: 'Hello World!'
-    });
-
-    $(function () {
-        var x = document.getElementById("demo");
-        var z = document.getElementById("demoz");
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(showPosition);
-        } else {
-            x.innerHTML = "Geolocation is not supported by this browser.";
-        }
-        function showPosition(position) {
-            x.value =   position.coords.latitude;
-            z.value =   position.coords.longitude;
-        }
-    });
-</script>
