--- a/app/assets/stylesheets/limbo.css.scss
+++ b/app/assets/stylesheets/limbo.css.scss
@@ -3,6 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+.imagenprincipal{
+  height: 600px;
+  width: 100%;
+}
+
 .seleccionado{
 
 }
