--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -1,7 +1,5 @@
 
 <%	 if signed_in? %>
-
-
   <div class="hidden-xs" id="googlemaps">
     <div id="map-canvas" ></div>
   </div>
@@ -19,8 +17,11 @@
     <%	fbplace = ActiveSupport::JSON.decode(open("https://graph.facebook.com/search?q=#{@actividad.namefb},page&fields=cover,checkins,name,location,category_list,picture.width(100)&type=place&center=#{current_user.lat},#{current_user.lng}&distance=15000&access_token=#{current_user.oauth_token}&limit=30").read) %>
     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="border: 1px solid #d3d6db; " >
       <% fbplace['data'].each do |result| %>
-
-        
+        <%	 if result.nil? %>
+              <div class="row" style="height: 200px">
+                <p>There are no place around here, please try another location.</p>
+              </div>
+        <%	 else %>
             <div id="lista" class="row" style="margin-bottom: -15px;  margin-top: -10px">
               <div class="col-md-4 col-sm-4 col-xs-4">
                 <%	 if result['picture'].nil?  %>
@@ -99,7 +100,7 @@
               </div>
             </div>
             <hr/>
-
+         <%	 end %>
     <%	 end %>
 
     </div>
@@ -107,8 +108,6 @@
     </div>
     <div class="col-md-7">
     </div>
-
-
     <script>
         $(document).ready(function () {
             var myLatlng = new google.maps.LatLng(<%= current_user.lat %>,<%= current_user.lng %>);
