--- a/app/views/limbo/home.html.erb
+++ b/app/views/limbo/home.html.erb
@@ -24,23 +24,28 @@
     <% end %>
 <% else %>
 
-    <%= render "layouts/topbarlogout"	  %>
-
-
     <div class="col-md-12 col-sm-12 col-xs-12" style="margin-bottom: 20px">
-      <div class="row" style="background-color: #593e73; border-radius: 5px; padding: 15px;  margin-top: -10px; ">
-        <div class="col-md-10 col-md-offset-1" style="margin-top: 100px; text-align: center; color: #ffffff; margin-bottom: 50px">
-          <p style="font-size: 24px; font-family: helvetica, verdana, arial, sans-serif"> QuickPlace is an app where users can view and make reservations at restaurants, bars, clubs, and events. </p>
-        </div>
-        <section>
-          <div class="text-center  ">
-            <i class="icon-facebook-sign"></i>  <%= link_to "Login with Facebook", user_omniauth_authorize_path(:facebook), class: " btn btn-lg btn-primary" %>
-            <div style="margin-top: 30px">
-              <h2 style="color: #ffffff">Welcome to QuickPlace</h2>
-            </div>
-          </div>
+    <div style="margin-left: -25px; margin-right: -25px; margin-top: -100px; height: 400px; overflow: hidden; ">
 
-        </section>
+      <%= image_tag "large.jpg", class: "imagenprincipal"  %>
+
+    </div>
+      <div style="margin-top: -200px; text-align: center">
+        <h1 style="color: #593e73">Welcome to QuickPlace</h1>
+      </div>
+      <div class="row" style="background-color: #593e73; border-radius: 5px; padding: 15px; margin-top: 110px ">
+        <div class="col-md-10 col-md-offset-1" style="margin-top: 100px; text-align: center; color: #ffffff; margin-bottom: 50px">
+          <p style="font-size: 24px; font-family: helvetica, verdana, arial, sans-serif"> QuickPlace is Social Networking app where you can:</p>
+          <br/>
+          <p style="font-size: 20px; font-family: helvetica, verdana, arial, sans-serif">   Make reservations at bars, clubs & restaurants - See where your friends are going tonight</p>
+          <p style="font-size: 20px; font-family: helvetica, verdana, arial, sans-serif">   Share your favorites places - View upcoming events, and More!</p>
+          </p>
+          <br/>
+          <div class="col-md-12">
+             <div class="col-md-1 col-md-offset-4"  style=" margin-right: -25px; margin-top: 3px"> <i class="fa fa-3x fa-facebook"></i> </div>
+             <div class="col-md-1">   <%= link_to "Login with Facebook", user_omniauth_authorize_path(:facebook), class: " btn btn-lg btn-primary" %></div>
+          </div>
+        </div>
 
 
       </div>
