--- a/app/views/layouts/_topbarxs.html.erb
+++ b/app/views/layouts/_topbarxs.html.erb
@@ -1,14 +1,8 @@
 <%	loc = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{current_user.lat},#{current_user.lng}&result_type=locality&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
 <div class="navbar navbar-fixed-top " role="navigation" style=" background-color: #f5f5f5;">
   <a id="menu-toggle" href="#" class="btn btn-default" style="margin-top: 2px; margin-left: 4px"><i class="fa fa-bars"></i></a>
-  <div style="text-align: center; margin-top: -20px; ">
-    <%	 if loc['results'][0].nil? %>
-
-    <%	 else %>
-        <%= loc['results'][0]['address_components'][0]['short_name']  %>
-    <%	 end %>
-  </div>
-  <ul class="nav" style=" margin-top: -20px">
+      <%=	 render "users/form_google_topbarxs" %>
+  <ul class="nav" style=" margin-top: -70px">
     <ul class="pull-right">
       <li id="fat-menu" class="dropdown" style="margin-top: -15px">
         <a href="#" role="button" id="drop3" class="dropdown-toggle" data-toggle="dropdown" >
